# octoagent

./: .cline_global_settings  .dockerignore  .env.docker.example  .env.example  .gitignore  .importlinter  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SOUL.md  compose.yaml  config.example.yaml  config.yaml  extensions_config.example.json  extensions_config.json  final_fix.sh  octoagent-service.sh  push_fixes.sh  skills-lock.json  start-octoagent.sh  verify2.sh  verify_fixes.sh
backend/: Dockerfile  Makefile  README.md  debug.py  langgraph.json  pyproject.toml  requirements.txt  ruff.toml
backend/scripts/: benchmark_providers.py  cleanup_pending_sends.py  daily_self_check.py  fallback_stress_verify.py  install_webui_assets.py  migrate_memory_schema.py  repair_system_memory.py  run_chat_regression_e2e.py  run_distributed_dispatch_smoke.py  run_execution_worker.py  run_langgraph_remote_lifecycle_e2e.py  run_long_running_soak.py  run_management_menu_smoke.py  run_multi_tenant_persistence_smoke.py  run_operator_module_closure_smoke.py  run_optimization_scorecard.py  run_query_engine_replay_golden.py  run_real_workflow_scenarios.py  run_release_precheck.py  run_release_readiness.py  run_release_readiness_contract_smoke.py  run_runtime_latency_benchmark.py  run_soak_baseline_suite.py  run_system_doctor.py  run_system_execution_security_smoke.py  run_tools_hub_registration_smoke.py  run_webui_smoke.py  run_workflow_langgraph_contract_smoke.py  summarize_chat_regression_trends.py  verify_workflow_providers.py  webui_branch_weather_workflow.py
backend/scripts/migrations/: 001_memory_v2.py  __init__.py  runner.py
backend/src/: architecture.py  client.py  client_agent.py  client_streaming.py  runtime_governance.py
backend/src/agent_core/: __init__.py  execution_policies.py  lifecycle.py  prompts.py  roles.py  service.py  session.py
backend/src/agent_runtime/: __init__.py  contracts.py  langgraph_remote.py  manager.py  workflow_contract.py
backend/src/agents/: __init__.py  degradation.py  dialogue_routing.py  intent_recognition.py  resource_profile.py  thread_state.py
backend/src/bootstrap/: __init__.py  graphrag_store.py  runtime.py  semantic_store.py
backend/src/brain/: __init__.py  builder_actions.py  contracts.py  evidence.py  execution_contracts.py  memory_reasoner.py  model_router.py  modules.py  planner.py  policy.py  quant.py  research.py  service.py  strategy_graph.py  strategy_pack.py
backend/src/browser_runtime/: contracts.py  execution.py  policy.py  profiles.py  service.py  store.py
backend/src/capability_core/: __init__.py  agent_skills_compat.py  policy.py  registry.py  service.py
backend/src/channel_sdk/: client.py
backend/src/channels/: __init__.py  external_bridge.py  feishu.py  manager.py  service.py  store.py  telegram.py
backend/src/common/: exceptions.py
backend/src/community/: __init__.py
backend/src/config/: __init__.py  agents_config.py  app_config.py  app_config_loader.py  app_config_paths.py  app_config_service.py  (+13 more)
backend/tests/: conftest.py  test_agent_tool_guide.py  test_common_exceptions.py  test_context_budget.py  test_context_compressor.py  test_model_default_selection.py  test_observability_tracer.py  test_parallel_executor.py  test_paths.py  test_prompt_cache.py  test_proxy_hygiene.py  test_security_guardrail.py  test_setup_apply.py  test_system_rag_store.py  test_tool_discovery.py  test_uploads_router.py  test_vector_query_cache.py
(+1375 files in other folders)
