[project]
name = "octoagent"
version = "2026.5.28.post2"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-sandbox>=0.0.19",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.4",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-api>=0.8.1,<0.9.0",
    "langgraph-cli>=0.4.14",
    "langgraph-runtime-inmem>=0.28.0,<0.29.0",
    "markdownify>=1.2.2",
    "markitdown[all,xlsx]>=0.0.1a2",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "sse-starlette>=2.1.0",
    "tavily-python>=0.7.17",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.34.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.4",
    "langchain-google-genai>=4.2.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "lark-oapi>=1.4.0",
    "slack-sdk>=3.33.0",
    "python-telegram-bot>=21.0",
    "langgraph-sdk>=0.1.51",
    "markdown-to-mrkdwn>=0.3.1",
    "huggingface_hub>=1.7.1",
    "llama-cpp-python>=0.3.23",
    "sentence-transformers>=3.4.0",
    "Pillow>=12.2.0",
    "faster-whisper>=1.0.0",
    "psutil>=7.2.2",
    # Security: pin vulnerable transitive deps to safe minimum versions
    "aiohttp>=3.13.4",
    "cryptography>=46.0.7",
    "langchain-core>=1.2.28",
    "orjson>=3.11.9",
    "pyasn1>=0.6.3",
    "pygments>=2.20.0",
    "pyjwt>=2.12.0",
    "requests>=2.33.0",
    "scrapling[fetchers]>=0.4.8",
    "rank-bm25>=0.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "slowapi>=0.1.9",
    "patchright>=1.59.1",
    "markdown>=3.10.0",
    "faiss-cpu>=1.14.2",
]

[dependency-groups]
dev = [
    "datamodel-code-generator==0.31.2",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "ruff>=0.14.11",
    "bandit>=1.9.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not live_ui'"
markers = [
    "live_ui: tests that require a live frontend (deselected by default)",
]
