[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octoagent-sdk"
version = "0.2.0"
description = "Python SDK for OctoAgent — typed HTTP and WebSocket clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OctoAgent Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["octoagent", "sdk", "ai", "agent"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/sievepub-2000/octoagent"
Documentation = "https://github.com/sievepub-2000/octoagent#readme"
Repository = "https://github.com/sievepub-2000/octoagent"

[tool.hatch.build.targets.wheel]
packages = ["src/python_sdk"]
